samples/_failures_safe/1761664664_33bfe6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a5609a68.c: In function ‘get_user_event’:
./samples/SAFE/__tmp_a5609a68.c:166:13: error: expected declaration or statement at end of input
  166 |             break;
      |             ^~~~~
./samples/SAFE/__tmp_a5609a68.c:166:13: error: expected declaration or statement at end of input
